Added html files

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/destination.html"></include>
+    <include src="./partials/explore.html"></include>
+    <include src="./partials/numbers.html"></include>
+    <include src="./partials/hills.html"></include>
+    <include src="./partials/lifes.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/getting.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
