--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/destination.html"></include>
-    <include src="./partials/explore.html"></include>
-    <include src="./partials/numbers.html"></include>
-    <include src="./partials/hills.html"></include>
-    <include src="./partials/lifes.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/getting.html"></include>
-    <include src="./partials/footer.html"></include>
+    <script defer src="./javascript/mobile-menu.js"></script>
+    <script defer src="./javascript/contact-us.js"></script>
   </body>
 </html>
