Added fon, transform

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,600&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@400;600;700&family=Kanit:ital,wght@0,400;0,500;0,600;1,500&family=Lobster&family=Monoton&family=Righteous&family=Teko:wght@400;600;700&family=VT323&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+
     <script defer src="./javascript/mobile-menu.js"></script>
     <script defer src="./javascript/contact-us.js"></script>
   </body>
