Added section services + footer, fived adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
+    <include src="./partials/services.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <script defer src="./javascript/mobile-menu.js"></script>
     <script defer src="./javascript/contact-us.js"></script>
